[package]
name = "token-app"
version = "0.1.0"
edition = "2021"

[dependencies]
pint-abi = "0.2.0"
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
essential-app-utils = "0.2.0"
essential-deploy-contract = "0.2.0"
essential-hash = "0.3.0"
essential-rest-client = "0.2.0"
essential-sign = "0.3.0"
essential-signer = "0.2.0"
essential-types = "0.2.0"
hex = "0.4.3"
tokio = { version = "1.40.0", features = ["full"] }
essential-wallet = { version = "0.2.0", features = ["test-utils"] } 

[dev-dependencies]
essential-app-utils = { version = "0.2.0", features = ["test-utils"] }
